refactor: LottoNumbers 싱글톤 생성, 책임 위임